# HesaiLidar_General_SDK

./: CMakeLists.txt  LICENSE  README.md  angle_correction_Pandar64.csv  change notes.md
include/pandarGeneral_sdk/: pandarGeneral_sdk.h
src/: pandarGeneral_sdk.cc  tcp_command_client.c  tcp_command_client.h  util.c  util.h  wrapper.cc  wrapper.h
src/PandarGeneralRaw/: CMakeLists.txt
src/PandarGeneralRaw/include/: log.h  pandar_log.h  version.h
src/PandarGeneralRaw/include/pandarGeneral/: input.h  pandarGeneral.h  pandarGeneral_internal.h  pandarQT.h  pandarXT.h  pcap_reader.h  point_types.h
src/PandarGeneralRaw/src/: input.cc  pandarGeneral.cc  pandarGeneral_internal.cc  pandarGeneral_internal.h  pcap_reader.cpp
test/: test.cc
